Edited wiki page RSAPI through web user interface.

--- a/wiki/RSAPI.wiki
+++ b/wiki/RSAPI.wiki
@@ -9,3 +9,9 @@ Rollout sampling approximate policy iteration is a policy iteration algorithm th
 C. Dimitrakakis, M. Lagoudakis, "Rollout Sampling Approximate Policy Iteration", Machine Learning Journal, 2008
 
 C. Dimitrakakis, M. Lagoudakis, "Algorithms and Bounds for Rollout Sampling Approximate Policy Iteration", European Workshop on Reinforcement Learning, 2008
+
+These algorithms are implemented in
+
+https://code.google.com/p/beliefbox/source/browse/trunk/src/algorithms/RSAPI.h
+
+https://code.google.com/p/beliefbox/source/browse/trunk/src/algorithms/RSAPI.cc
