--- a/wiki/Introduction.wiki
+++ b/wiki/Introduction.wiki
@@ -12,30 +12,32 @@ This is a summary of the main features of the code-base:
 
 = Algorithms == 
 
-Bayesian RL Search
-Expectation-Maximisation
-Q-Learning
-Rollout Classification Policy Iteration
-Rollout Sampling Approximate Policy Iteration
-Sarsa
-MWAL
-Multi-MDP Value Iteration
-Thompson Sampling
-Variable order Markov reinforcement learning
-UCB, UCRL
+- Bayesian RL Search
+- Expectation-Maximisation
+- Policy Iteration
+- Q-Learning
+- Rollout Classification Policy Iteration
+- Rollout Sampling Approximate Policy Iteration
+- Sarsa
+- MWAL
+- Multi-MDP Value Iteration
+- Thompson Sampling
+- Value iteration (with action elimination)
+- Variable order Markov reinforcement learning
+- UCB, UCRL
 
 = Models =
 
-Bayesian Non-Parametric Conditional Density Estimation
-Conjugate Priors (e.g. Normal/Wishart, Multinomial/Dirichlet)
-Context Trees and Bayesian Variable Order Markov Models
-Hidden Markov Models
-Inverse Reinforcement Learning Models
-KNN classifier
-Linear classifiers
-MDP Models
-Multitask Inverse Reinforcement Learning Models
-Neural Networks
+- Bayesian Non-Parametric Conditional Density Estimation
+- Conjugate Priors (e.g. Normal/Wishart, Multinomial/Dirichlet)
+- Context Trees and Bayesian Variable Order Markov Models
+- Hidden Markov Models
+- Inverse Reinforcement Learning Models
+- KNN classifier
+- Linear classifiers
+- MDP Models
+- Multitask Inverse Reinforcement Learning Models
+- Neural Networks
 
 = Core Classes =
 
