Edited wiki page Introduction through web user interface.

--- a/wiki/Introduction.wiki
+++ b/wiki/Introduction.wiki
@@ -12,19 +12,45 @@ This is a summary of the main features of the code-base:
 
 = Algorithms == 
 
-- Bayesian RL Search
 - Expectation-Maximisation
+- Gradient Bayesian RL
 - Policy Iteration
 - Q-Learning
 - Rollout Classification Policy Iteration
 - Rollout Sampling Approximate Policy Iteration
-- Sarsa
+- Monte-Carlo Gradient Bayesian RL
+- Monte-Carlo Upper and Lower bound Bayesian RL (extension of Thompson sampling)
+- Multi-MDP Backwards Induction
 - MWAL
-- Multi-MDP Value Iteration
-- Thompson Sampling
-- Value iteration (with action elimination)
-- Variable order Markov reinforcement learning
+- Sarsa
+- Stochastic branch and bound for belief tree search (using MC bounds)
+- Thompson sampling
+- Value Iteration (with action elimination)
 - UCB, UCRL
+
+= Environments =
+
+- Acrobot
+- Bike
+- Blackjack
+- Cartpole
+- ContextBandit
+- Continuous Chain
+- Corridor
+- Discrete Chain
+- Discretiser (for continuous environments)
+- Double Loop
+- Environment
+- Gridworld
+- Inventory management
+- Linear context bandit
+- Linear dynamic quadratic
+- Mountaincar (2d and 3d)
+- POMDP Maze
+- Optimistic Task
+- Puddleworld
+- Random MDPs
+- Riverswim
 
 = Models =
 
